--- a/pom.xml
+++ b/pom.xml
@@ -79,7 +79,7 @@
                                 <limit>
                                     <counter>BRANCH</counter>
                                     <value>COVEREDRATIO</value>
-                                    <minimum>0%</minimum>
+                                    <maximum>100%</maximum>
                                 </limit>
                             </limits>
                         </rule>
